infras/kustomize/bkm2/k8s/overlays/prod/om-bkm2-virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: om-bkm2-virtual-services
spec:
  gateways:
    - ingress-istio/chorus-prod-gateway
  hosts:
    - "chorus-prod.one-line.com"
  http:
    - match:
        - uri:
            prefix: /bkm2/bff/graphql
      route:
        - destination:
            port:
              number: 80
            host: om-bkm2-dsd-bff
    - match:
        - uri:
            prefix: /bkm2
      route:
        - destination:
            port:
              number: 80
            host: om-bkm2-dsd-ui
